--- a/modules/time_date/time_date_core.yaml
+++ b/modules/time_date/time_date_core.yaml
@@ -3,6 +3,10 @@
 #
 # Simply shows the time and date
 
+api:
+  on_client_connected:
+    - script.execute: time_update
+
 script:
   - id: time_update
     then:
