--- a/guition-4848s040.yaml
+++ b/guition-4848s040.yaml
@@ -25,8 +25,8 @@ substitutions:
   # Set touchscreen idle timeout - In night mode back light goes off after this amount of time
   touchscreen_idle_timeout: "600s"
   # Screen Size
-  screen_height: '480'
-  screen_width: '480'
+  #screen_height: '480'
+  #screen_width: '480'
 
 esphome:
   name: "guition-4848s040"
@@ -63,7 +63,8 @@ packages:
   hardware: !include esphome-lvgl-panel/hardware/guition-esp32-s3-4848s040.yaml
 
   # Basic boot screen with ESPHome logo and device diagnostic info
-  loading_screen: !include esphome-lvgl-panel/modules/boot_screen/boot_screen_core.yaml
+  boot_screen: !include esphome-lvgl-panel/modules/boot_screen/boot_screen_core.yaml
+
   info_screen: !include esphome-lvgl-panel/pages/info.yaml
 
   time_date_widget:
